# orb8

./: Cargo.toml  Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/: daemonset.yaml
docs/: ROADMAP.md
orb8-agent/: Cargo.toml
orb8-agent/src/: aggregator.rs  config.rs  grpc_server.rs  health.rs  health_server.rs  k8s_watcher.rs  lib.rs  main.rs  pod_cache.rs  probe_loader.rs
orb8-cli/: Cargo.toml
orb8-cli/src/: lib.rs
orb8-common/: Cargo.toml
orb8-proto/: Cargo.toml
src/: main.rs
