[package]
name = "orb8-agent"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
description = "Node agent for orb8 (DaemonSet)"
repository = "https://github.com/Ignoramuss/orb8"
homepage = "https://github.com/Ignoramuss/orb8"
documentation = "https://docs.rs/orb8-agent"
readme = "../README.md"
keywords = ["ebpf", "observability", "kubernetes", "agent", "daemonset"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
orb8-common = { version = "0.0.5", path = "../orb8-common" }
hostname = "0.4"
dashmap = "6.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
libc = "0.2"
kube = { version = "0.98", features = ["runtime", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
futures = "0.3"
orb8-proto = { version = "0.0.5", path = "../orb8-proto" }
tonic = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
aya-build = "0.1.3"
anyhow = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "orb8-agent"
path = "src/main.rs"
