[package]
name = "orb8-common"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
description = "Shared types between eBPF and userspace for orb8"
repository = "https://github.com/Ignoramuss/orb8"
homepage = "https://github.com/Ignoramuss/orb8"
documentation = "https://docs.rs/orb8-common"
readme = "../README.md"
keywords = ["ebpf", "observability", "kubernetes", "types"]
categories = ["development-tools"]

[features]
default = ["userspace"]
userspace = []

[dependencies]

[lib]
path = "src/lib.rs"
